# stackage-tester

./: .gitignore  Readme.md  cabal.project  stackage-tester.cabal
exe/: StackageTester.hs
src/Data/: Cabal.hs  CabalConfig.hs  Filesystem.hs  Lock.hs
src/System/IO/Temp/: OsPath.hs
src/System/OsPath/: Ext.hs
