cabal-version: 3.6

-- Created : 10 February 2024

name:
  stackage-tester
version:
  0.1
synopsis:
  TODO
description:
  TODO
copyright:
  (c) Sergey Vinokurov 2024
license:
  Apache-2.0
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

extra-source-files:
  Changelog.md
  Readme.md

homepage:
  https://github.com/sergv/stackage-tester

source-repository head
  type: git
  location: https://github.com/sergv/stackage-tester.git

common ghc-options
  default-language:
    GHC2021

  default-extensions:
    LambdaCase

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -- -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-missing-poly-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Data.Cabal
    Data.CabalConfig
    Data.Lock
    System.OsPath.Ext
    System.IO.Temp.OsPath
  hs-source-dirs:
    src
  build-depends:
    , Cabal >= 3.10
    , base >= 4.16
    , bytestring >= 0.10.2
    , directory
    , exceptions
    , file-io
    , filepath >= 1.5
    , mtl
    , prettyprinter-combinators
    , os-string
    , temporary
    , text

executable stackage-tester
  import: ghc-options
  main-is:
    exe/StackageTester.hs
  build-depends:
    , Cabal-syntax
    , async
    , base >= 4.16
    , bytestring
    , containers
    , directory
    , file-io
    , filepath >= 1.5
    , mtl
    , optparse-applicative
    , os-string
    , prettyprinter
    , prettyprinter-combinators
    , stackage-tester
    , stm
    , tasty
    , tasty-hunit
    , text
    , typed-process
  ghc-options:
    -rtsopts
    -threaded
    "-with-rtsopts=-N16 -A128M"
    -main-is StackageTester
